--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,162 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Comfortaa', cursive;
+}
+
+nav {
+    width: 100vw;
+    height: 10vh;
+}
+
+nav .navbar {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: right;
+    right: 10vh;
+}
+
+nav .navbar a {
+    display: block;
+    float: right;
+    font-size: 18px;
+    margin-right: 30px;
+    margin-top: calc(5vh - 11px);
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+    border: 1px solid transparent;
+}
+
+nav .navbar a:hover {
+    border: 1px solid white;
+    border-radius: 25px;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #007cc4;
+    opacity: 0.999999;
+}
+
+#header-img {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.2;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+}
+
+.header-content {
+    display: block;
+    top: 30vh;
+    position: absolute;
+    color: white;
+    height: 50vh;
+    width: 100vw;
+    text-align: center;
+}
+
+.header-content h1, h2 {
+    font-size: 45px;
+}
+
+.realization {
+    display: flex;
+    flex-direction: row;
+    margin: 100vh 0 0 0;
+    position: relative;
+    font-size: 0;
+    height: 50vh;
+    text-align: center;
+}
+
+.realization p {
+    display: flex;
+    align-items: center;
+    width: 33.3333vw;
+    font-size: 25px;
+    margin: 0 auto;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    background-color: #fff;
+}
+
+.realization p:hover {
+    background-color: #007cc4;
+}
+
+.projects {
+    width: 80vw;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.project-head {
+    margin: 0 auto;
+    border-bottom: 2px solid #007cc4;
+    width: 49%;
+}
+
+.project-blocks {
+    display: flex;
+    flex-basis: 50%;
+    text-align: left;
+    align-items: flex-start;
+}
+
+.project-blocks h1 {
+    text-align: center;
+}
+
+.project-blocks .block-one, .block-two, .block-three, .block-four{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    flex-wrap: wrap;
+}
+
+.wycena {
+    display: flex;
+    margin: 0 auto 0 auto;
+    width: 80%;
+    height: 15vh;
+    text-align: center;
+    border: 5px solid #007cc4;
+}
+
+.wycena .tekst {
+    display: block;
+    width: 65%;
+    float: left;
+}
+
+.wycena a {
+    display: flex;
+    background-color: #007cc4;
+    border: 1px solid #007cd9;
+    padding: 15px;
+    margin-top: 7.5vh;
+    margin-left: 10%;
+    transform: translateY(-50%);
+    border-radius: 25px;
+    text-decoration: none;
+    color: white;;
+    transition: .5s;
+}
+
+.wycena a:hover {
+    display: flex;
+    background-color: white;
+    color: black;
+}
