--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,8 @@
 
   <body>
     <header>
-        <img id="header-img" src="/blair-bitch-project/app/assets/images/header-photo-bw.jpg" alt="header">
+        <!-- <img id="header-img" src="images/header-photo-bw.jpg" alt="header" /> -->
+        <%= image_tag("header-photo-bw.jpg", :alt => "header") %>
         <nav>
             <div class="navbar">
                 <a href="#kontakt">kontakt</a>
@@ -23,7 +24,8 @@
             </div>
         </nav>
         <div class="header-content">
-            <img id="header-logo" src="/blair-bitch-project/app/assets/images/logo-white.svg" alt="logo-white">
+            <!-- <img id="header-logo" src="images/logo-white.svg" alt="logo-white" /> -->
+            <%= image_tag("logo-white.svg", :alt => "logo-white") %>
             <h1>APLIKACJE I STRONY INTERNETOWE</h1>
             <h2>dopasowane do twoich potrzeb</h2>
         </div>
