--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,8 +11,37 @@
   </head>
 
   <body>
-    
-
-
+  <body>
+  <div class="container">
+      <nav>
+          <div class="logo">logo</div>
+          <div class="navbar">
+              navbar
+          </div>
+      </nav>
+      <header>
+          <div class="header-wrapper">
+          <div class="header-text">
+              <h2>Znajdz</h2>
+              <h2>samochod</h2>
+              <h2>marzen juz teraz!</h2>
+          </div>
+      </div>
+      </header>
+      <section>
+          <div class="buttons">
+              <a href="#">ZNAJDZ POJAZD</a>
+              <a href="#">SPRZEDAJ POJAZD</a>
+          </div>
+          <div class="announcement">
+              Ogloszenia
+          </div>
+      </section>
+      <footer>
+          stopka
+      </footer>
+  </div>
+  
+</body> 
 </body>
 </html>
