--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,9 +14,9 @@
   <body>
   <div class="container">
       <nav>
-          <div class="logo">logo</div>
+          <div class="logo">LOGO</div>
           <div class="navbar">
-              navbar
+            <a href="#"><%= image_tag("menu-button.svg", :alt => "hamburger-menu", :id => "hamburger-menu-icon") %></a>
           </div>
       </nav>
       <header>
