--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,13 +35,14 @@
           </div>
           <div class="announcement">
               Ogloszenia
+              <%= link_to 'Ogloszenia', controller: 'announcements' %>
           </div>
       </section>
       <footer>
           stopka
       </footer>
   </div>
-  
-</body> 
+
+</body>
 </body>
 </html>
