--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,8 +30,10 @@
       </header>
       <section>
           <div class="buttons">
-              <a href="#">ZNAJDZ POJAZD</a>
-              <a href="#">SPRZEDAJ POJAZD</a>
+                <div class="button-style">
+                    <a href="#"><span>ZNAJDZ POJAZD</span></a>
+                    <a href="#"><span>SPRZEDAJ POJAZD<span></a>
+                </div>
           </div>
           <div class="announcement">
               Ogloszenia
