announcement, var, extra button, transitions

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,13 +31,15 @@
       <section>
           <div class="buttons">
                 <div class="button-style">
+                    <a href="#"><span>EXTRA</span></a>
                     <a href="#"><span>ZNAJDZ POJAZD</span></a>
                     <a href="#"><span>SPRZEDAJ POJAZD<span></a>
                 </div>
           </div>
           <div class="announcement">
-              Ogloszenia
-              <%= link_to 'Ogloszenia', controller: 'announcements' %>
+              <span><%= link_to 'Ogloszenia', controller: 'announcements' %></span>
+              <span><%= link_to 'Ogloszenia', controller: 'announcements' %></span>
+              <span><%= link_to 'Ogloszenia', controller: 'announcements' %></span>
           </div>
       </section>
       <footer>
