--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -25,6 +25,46 @@
   </p>
 
   <p>
+    <%= form.label :cena %><br>
+    <%= form.text_field :price %>
+  </p>
+
+  <p>
+    <%= form.label :lokalizacja %><br>
+    <%= form.text_field :location %>
+  </p>
+
+  <p>
+    <%= form.label :rocznik %><br>
+    <%= form.text_field :year %>
+  </p>
+
+  <p>
+    <%= form.label :przebieg %><br>
+    <%= form.text_field :mileage %>
+  </p>
+
+  <p>
+    <%= form.label :pojemność %><br>
+    <%= form.text_field :engine %>
+  </p>
+
+  <p>
+    <%= form.label :paliwo %><br>
+    <%= form.text_field :fuel %>
+  </p>
+
+  <p>
+    <%= form.label :moc %><br>
+    <%= form.text_field :power %>
+  </p>
+
+  <p>
+    <%= form.label :stan %><br>
+    <%= form.text_field :condition %>
+  </p>
+
+  <p>
     <%= form.submit %>
   </p>
 
